[package]
name = "rssdownloader-rs"
version = "0.1.0"
authors = ["Tolien <tolien@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "2.0.7"
regex = "1.10.4"
signal-hook = "0.3.17"
toml = "0.8.10"
log = "0.4.21"
reqwest = { version = "0.12.2", features = ["gzip", "blocking"] }
dirs = "5.0.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
log4rs = "1.3.0"
clap = "4.5.4"
time = "0.3.34"
