[package]
name = "rssdownloader-rs"
version = "0.1.0"
authors = ["Tolien <tolien@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "2.0.12"
regex = "1.11.1"
signal-hook = "0.3.18"
toml = "0.8.22"
log = "0.4.27"
reqwest = { version = "0.12.19", features = ["gzip", "blocking"] }
dirs = "6.0.0"
rusqlite = { version = "0.36.0", features = ["bundled"] }
log4rs = "1.3.0"
clap = "4.5.39"
time = "0.3.41"
